--- a/Astrit.Trstena.html
+++ b/Astrit.Trstena.html
@@ -12,15 +12,23 @@
         <b><i>Profili im</i></b>
     </h1>
 
-    <p><img src= "me.jpg" height="250px"/><br></p>
-        <strong>Astrit Trstena</strong>, i lindur më <b>2000</b> në <i>Shkup</i>, Maqedonia e Veriut.
+    <p><img src= "me.jpg" 
+        height="250px"
+        alt="Foto e profilit tim"
+        title="Astrit Trstena foto"/><br></p>
+        <strong>Astrit Trstena</strong>, i lindur në  vitin <b>2000</b> në <i>Shkup</i>, Maqedonia e Veriut.
         <p>Shkollën fillore e kam përfunduar në shkollen<b> "Vasill Gllavinov"</b></p>
         <p>Shkollën e mesme në <b>SH.M.I."Medreseja Isa Beu-Shkup"</b></p>
         <p>Aktualisht jam duke ndjekur studimet në 
-            <a href="https://www.ibu.edu.mk/"target="_blank">
-            Univerzitetin Ballkanik në Shkup</a><b> - Fakulteti "Inxhinieria Kompjuterike"</b></p>
-        <p>Punoj si dizajnues në një firmë për marketing<b> Bj.Print-Shkup.</b></p>
+        <a href="https://www.ibu.edu.mk/"target="_blank">
+        Univerzitetin Ballkanik në Shkup</a><b> - Fakulteti "Inxhinieria Kompjuterike"</b></p>
+        <del>Punoj si  ne kompanin Homax - Shkup</del><br>
 
+        <del>Punoj si shites ne kompanin ElektroitaliaGewiss - Shkup</del><br>
+
+        <ins>Punoj si dizajnues në një firmë për marketing<b> Bj.Print-Shkup.</b></ins>
+
+        <h4>Thenja e preferuar</h4>
     <blockquote>
         <i>"Dhe vdekja do te vdes, e pastaj do te mbetet vetem jeta"</i><br>
         <i><b>Arsim Fazlija</b></i>
